Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,8 +1,50 @@
 ---
-title: Introduction
-description: 'What is InQuery?'
+title: What is InQuery?
+description: 'InQuery is an AI-powered workspace for medicolegal review, research, and report writing. InQuery helps physicians, nurses, case managers, and attorneys quickly make sense of medical records so they can do better work in less time.'
 ---
 
+## Features
+<CodeGroup>
+
+```json Indexing and Tabbing
+"navigation": [
+    {
+        "group": "Getting Started",
+        "pages": ["quickstart"]
+    }
+]
+```
+
+```json Document Search
+"navigation": [
+    {
+        "group": "Getting Started",
+        "pages": [
+            "quickstart",
+            {
+                "group": "Nested Reference Pages",
+                "pages": ["nested-reference-page"]
+            }
+        ]
+    }
+]
+```
+
+```json Case and Document Summaries
+"navigation": [
+    {
+        "group": "Getting Started",
+        "pages": [
+            "quickstart",
+            {
+                "group": "Nested Reference Pages",
+                "pages": ["nested-reference-page"]
+            }
+        ]
+    }
+]
+
+</CodeGroup>
 <img
   className="block dark:hidden"
   src="/images/hero-light.svg"
