--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -5,14 +5,14 @@ description: 'InQuery is an AI-powered workspace for medical record organization
 
 ## Introduction to InQuery
 
-<div className="aspect-video mb-5">
+<!-- <div className="aspect-video mb-5">
   <iframe 
     src="https://www.loom.com/embed/6417749537a3467a86755ba318ace10e" 
     frameBorder="0" 
     allowFullScreen
     style={{width: '100%', height: '100%'}}
   ></iframe>
-</div>
+</div> -->
 
 ## Features
 
