--- a/essentials/case-management.mdx
+++ b/essentials/case-management.mdx
@@ -53,7 +53,7 @@ To download the case summary as a separate pdf file, click on the "Download" ico
 
 To download the executive summary as part of the final case file, click on the "Download" icon at the top of the exhibit list and check the box next to the "Executive Summary".
 
-<img src="/images/case-management/summary-download.png" alt="Summary download" />
+<!-- <img src="/images/case-management/summary-download.png" alt="Summary download" /> -->
 
 
 <AccordionGroup>
