Documentation edits made through Mintlify web editor

--- a/essentials/case-management.mdx
+++ b/essentials/case-management.mdx
@@ -46,8 +46,8 @@ The case metadata can only be updated from inside of a case. To update the case 
 
 
 ## Case (Executive) Summaries
-The executive case summaries are generated as a narrative summary of the contents of the case. If you upload multiple files, all files will be considered as input to the case summary by default. In order to filter out specific content from being included in the case summary, you can filter out sections from the case using the standard filter function 
-then use the re-run button to the right of the Executive Summary header in order to re-generate the case summary using only the content that has not been filtered. You may regenerate or edit the summary as many times as needed.
+The executive case summaries are generated based on the contents of the case. All uploaded files will be considered as input to the case summary by default. In order to filter out specific content from being included in the case summary, you can filter out sections from the case using the standard filter function 
+then re-run button the summary using only the content that has not been filtered. You may regenerate or edit the summary as many times as needed.
 
 To download the case summary as a separate pdf file, click on the "Download" icon to the right of the Executive Summary header.
 
