--- a/essentials/page-management.mdx
+++ b/essentials/page-management.mdx
@@ -4,6 +4,15 @@ description: 'Manage your pages'
 icon: 'page'
 ---
 
-# Overview
+Each record/section will consist of one or many pages. Pages can easily be removed from the downloadable case file or ignored during the summer simply by clicking on the page. 
 
-Coming soon.
+If a page shows "Excluded from report" then it will not be downloaded with the rest of the file.
+
+When you refresh the executive summary, excluded pages will be ignored during summarization.
+
+## Uploaded Pages
+InQuery's billing model is based on uploaded pages. At the beginning of each month, your organization's pages will be billed for a predetermined number of pages and these pages will be added to your organization's credits.
+
+Each time you upload a file, you will be charged 1 credit for every page in the file. 
+
+InQuery does not charge for any other actions like downloading pages or running summaries, but InQuery also does not refund credits for deleted pages.
