--- a/essentials/team-management.mdx
+++ b/essentials/team-management.mdx
@@ -4,9 +4,4 @@ description: 'Manage your team'
 icon: 'people'
 ---
 
-# Overview
-
-Coming soon.
-## Adding Team Members
-
-## Sharing Cases
+Every single user on InQuery belongs to a team/organization.
