--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -5,14 +5,16 @@ description: 'InQuery is an AI-powered workspace for medical record organization
 
 ## Introduction to InQuery
 
-<!-- <div className="aspect-video mb-5">
+<div className="aspect-video mb-5">
   <iframe 
-    src="https://www.loom.com/embed/6417749537a3467a86755ba318ace10e" 
-    frameBorder="0" 
-    allowFullScreen
-    style={{width: '100%', height: '100%'}}
-  ></iframe>
-</div> -->
+    src="https://www.loom.com/embed/6cd81d6f468141fda528065fbc3bbc47?sid=4a36d715-2078-4faa-b379-db903a15b923" 
+    frameborder="0" 
+    webkitallowfullscreen 
+    mozallowfullscreen 
+    allowfullscreen 
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+    </iframe>
+</div>
 
 ## Features
 
