Update with video

--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Introduction
 description: 'InQuery is an AI-powered workspace for medical record organization and review. InQuery helps medical legal professionals like physicians, nurse case managers, and attorneys quickly make sense of medical records so they can do better work in less time.'
 ---
 
@@ -8,12 +8,12 @@ description: 'InQuery is an AI-powered workspace for medical record organization
 <div className="aspect-video mb-5">
   <iframe 
     src="https://www.loom.com/embed/6cd81d6f468141fda528065fbc3bbc47?sid=4a36d715-2078-4faa-b379-db903a15b923" 
-    frameborder="0" 
-    webkitallowfullscreen 
-    mozallowfullscreen 
-    allowfullscreen 
-    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
-    </iframe>
+    frameBorder="0" 
+    webkitAllowFullScreen 
+    mozAllowFullScreen 
+    allowFullScreen 
+    style={{width: "100%", height: "100%"}}
+  />
 </div>
 
 ## Features
