--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -23,8 +23,8 @@ https://app.inquery.ai/register/<registration-token>?organization_id=<your-organ
 </AccordionGroup>
 
 Once you have a registration link, you will need to register your account by filling out the following form:
-<img src="/images/register.png" alt="Register Form" />
+![Register Form](/images/register.png)
 
 After registration, you should land on the main InQuery dashboard.
 
-<img src="/images/blank-dashboard.png" alt="Blank Dashboard" />
+![Blank Dashboard](/images/blank-dashboard.png)
