--- a/essentials/team-management.mdx
+++ b/essentials/team-management.mdx
@@ -4,4 +4,6 @@ description: 'Manage your team'
 icon: 'people'
 ---
 
-Every single user on InQuery belongs to a team/organization.
+Every single user on InQuery belongs to a team/organization. You can manage your team members and your team's page usage from the Team Settings page.
+
+More details coming soon.
